test/src/e2e_vm_tests/test_programs/should_fail/attributes_missing_annotated_item/src/trailing_multiple_inner_doc_comments.sw
library;

//! This is a misplaced inner doc comment.
//! It has several lines.

//! Even an empty line in-between them.
//! And there are no items following them.